--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
       min-height: 100vh;
       box-shadow: 2px 2px 10px 4px rgba(0,0,0,0.3);
     }
+    #servers:empty {
+      content: "No servers found";
+      text-align: center;
+      text-transform: capitalize;
+    }
     #servers .server-card {
       background-size: cover;
       background-position: center center;
@@ -48,8 +53,7 @@
         <h1>Northstar Servers</h1>
       </div>
     </div>
-    <div id="servers" class="row">
-    </div>
+    <div id="servers" class="row"></div>
   </div>
 </body>
 </html>
