Made paths relative

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-  <script src="/scripts/script.js" charset="utf-8"></script>
+  <script src="scripts/script.js" charset="utf-8"></script>
   <style media="screen">
     h1{
       text-align: center;
       padding: 20px 0;
     }
     body {
-      background: url(/images/background.jpg);
+      background: url(images/background.jpg);
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div id="servers" class="row">
-      <div class="spinner"><img src="/images/spinner.gif" alt="Loading"></div>
+      <div class="spinner"><img src="images/spinner.gif" alt="Loading"></div>
     </div>
   </div>
 </body>
