--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
       display: inline-block;
       height: 20px;
     }
+    .noservers {
+      text-align: center;
+      font-size: 30px;
+      height: 80vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   </style>
 </head>
 <body>
