--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Northstar Servers</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
@@ -13,6 +13,13 @@
     h1{
       text-align: center;
       padding: 20px 0;
+    }
+    h2 {
+      word-break: break-all;
+    }
+    #available h2 {
+      padding: 0 20px;
+      color: #333;
     }
     body {
       background: url(images/background.jpg);
@@ -31,12 +38,14 @@
       text-transform: capitalize;
     }
     #servers .server-card {
+      padding: 0;
+    }
+    #servers .background {
       background-size: cover;
       background-position: center center;
       background-repeat: no-repeat;
-      border-radius: 20px;
       margin: 20px;
-      padding: 0;
+      border-radius: 20px;
     }
     #servers .info{
       background: rgba(0,0,0,0.4);
@@ -60,6 +69,11 @@
       justify-content: center;
       align-items: center;
     }
+	@media screen and (max-width:545px) {
+	  .noservers {
+		height: 60vh;
+	  }
+	}
   </style>
 </head>
 <body>
@@ -69,6 +83,7 @@
         <h1>Northstar Servers</h1>
       </div>
     </div>
+    <div id="available" class="row"></div>
     <div id="servers" class="row">
       <div class="spinner"><img src="images/spinner.gif" alt="Loading"></div>
     </div>
