--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     h2 {
       word-break: break-all;
     }
-    #available h2 {
-      padding: 0 20px;
+    #available h2,
+    #available-players h2 {
       color: #333;
     }
     body {
@@ -167,6 +167,7 @@
       </div>
     </form>
     <div id="available" class="row"></div>
+    <div id="available-players" class="row"></div>
     <div id="servers" class="row">
       <div class="spinner"><img src="images/spinner.gif" alt="Loading"></div>
     </div>
